2007-07-31  Inge Wallin  <inge@lysator.liu.se>

	Fix krazy issue 14: inline methods in public classes
	* src/lib/GridMap.{h,cpp} (initCrossHorizon): Remove function and
	put in the code, since it was only used once..
	* src/lib/vectormap.{h,cpp} (initCrossHorizon): Remove function
	and put in the code, since it was only used once..

	Cleaning, according to the TODO file.
	* src/lib/maptheme.cpp: Clean (not many changes, really)

	Fix krazy issue 23: spelling errors.
	* src/lib/HttpFetchFile.cpp (httpRequestFinished): Fix spelling
	* src/lib/gps/Route.cpp (draw): Fix spelling

	Translate headers of MarbleControlBox tabs, and fix Krazy issue
	18: inappropriate pass-by-value function args.
	* src/lib/MarbleControlBox.{h,cpp} (setWidgetTabShown): Parameter
	QString& instead of QString
	(setNavigationTabShown),
	(setLegendTabShown),
	(setMapViewTabShown),
	(setCurrentLocationTabShown): Translate header of tabs
	
	Add a warning for tackat to look at.
	* src/lib/TileCache.cpp (insert): Add warning.

	Krazy issue 13: Proper include directives.
	* src/lib/TileCache.cpp: Guard
	* src/lib/gps/TrackContainer.h: Guard
	* src/lib/gps/TrackPoint.h: Guard
	
	Coding standards.
	* src/lib/MarbleWidgetInputHandler.cpp: Fix indentation according
	to coding standards.

	Move vector on/off parameters to ViewParams:
	* src/lib/ViewParams.h: new members: m_showIcelayer,
	m_showBorders, m_showRivers, m_showLakes
	* src/lib/ViewParams.cpp (constructor): initialize the new members
	* src/lib/vectorcomposer.h (class VectorComposer): 
	(drawTexturemap): Change signature to only take a ViewParams*
	(paintBaseTexturemap): Change signature to take a ViewParams*
	(paintTexturemap): Change signature to take a ViewParams*
	* src/lib/vectorcomposer.cpp: 
	* src/lib/MarbleModel.cpp (paintGlobe): Call
	VectorComposer methods according to new signatures.
	* src/lib/MarbleWidget.cpp: Use new members in Viewparams

2007-07-30  Inge Wallin  <inge@lysator.liu.se>

	Move relief on/off parameter to ViewParams